<resources>
    <string name="app_name">UniRate 3.0</string>
    <string name="Überschrift1">Welcome to UniRate</string>
    <string name="Weiterbutton1">Weiterbutton1</string>
    <string name="Überschrift2">UniRatings</string>
    <string name="WeitrButton2">WeiterButton2</string>
    <string name="TechnikumButton">FH Technikum Wien</string>
    <string name="technischeButton">Technische Universität Wien</string>
    <string name="uniwienButton">Universität Wien</string>
    <string name="campusButton">FH Campus Wien</string>
    <string name="bokuButton">BOKU</string>
    <string name="rating1">Rating in %</string>
    <string name="rating2">Rating in %</string>
    <string name="rating3">Rating in %</string>
    <string name="rating4">Rating in %</string>
    <string name="rating5">Rating in %</string>
    <string name="button8">FH Campus Wien</string>
    <string name="button9">Wirtschaftsuniversität Wien</string>
    <string name="Überschrift">University Ratings</string>
    <string name="Biomedical_Engineering">Biomedical Engineering</string>
    <string name="electronics">Electronics and Business</string>
    <string name="elektronik">Elektronik</string>
    <string name="wirtschaft">Elektronik/Wirtschaft</string>
    <string name="energie">Erneuerbare Energie</string>
    <string name="act_BsC">act_BsC</string>
    <string name="bachelorstudieng_nge">Bachelorstudiengänge</string>
    <string name="biomedical_engineering">Biomedical Engineering</string>
    <string name="nextButton2">nextButton2</string>
    <string name="nextButton3">nextButton3</string>
    <string name="allgchem">Allgemeine Chemie</string>
    <string name="Profbut1">Profbut1</string>
    <string name="Lehrplan">Lehrplan</string>
    <string name="Unterlagen">Unterlagen</string>
    <string name="Stoffmenge">Stoffmenge</string>

</resources>