<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BBEFÄCHER.SEMESTER1.allgchem">

    <TextView
            android:text="Allgemeine Chemie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintVertical_bias="0.071"
            android:contentDescription="@string/allgchem"
            android:textSize="30sp"/>
    <TextView
            android:text="Lehrplan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintVertical_bias="0.2" android:contentDescription="@string/Lehrplan"/>

    <TextView
            android:text="Unterlagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintVertical_bias="0.308" android:contentDescription="@string/Unterlagen"/>
    <TextView
            android:text="Stoffmenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintVertical_bias="0.424" android:contentDescription="@string/Stoffmenge"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_Prof1"
            android:layout_width="411dp"
            android:layout_height="320dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="384dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            app:layout_constraintHorizontal_bias="0.0"><![CDATA[>

            ]]>
        <AutoCompleteTextView
                android:id="@+id/act_Prof1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="Professor?"
                android:textSize="30sp"
                android:textStyle="italic"
                android:padding="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_send"
            android:id="@+id/nextButton4"
            android:tint="#3F51B5"
            android:background="#FFEB3B"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.889"
            app:layout_constraintVertical_bias="0.948"
            android:contentDescription="@string/Profbut1"/>

</androidx.constraintlayout.widget.ConstraintLayout>

