<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BBEFÄCHER.SEMESTER1.koko" android:background="#3F51B5" android:backgroundTint="#3F51B5"
        android:foregroundTint="#3F51B5">

    <TextView
            android:text="Anatomie, Physiologie und Pathophysiologie 2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/anat2.1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintVertical_bias="0.071"
            android:contentDescription="@string/allgchem"
            android:textSize="30sp"
            android:textColor="#000000"/>

    <RatingBar
            android:layout_width="235dp"
            android:layout_height="45dp"
            android:id="@+id/anat2ratingBar1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.188"
            android:scaleX=".5"
            android:scaleY=".5"

    />
    <RatingBar
            android:layout_width="235dp"
            android:layout_height="45dp"
            android:id="@+id/anat2ratingBar2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.253"
            android:scaleX=".5"
            android:scaleY=".5"

    />

    <TextView
            android:text="Lehrplan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/anat2.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintVertical_bias="0.181"
            android:contentDescription="@string/Lehrplan" android:textColor="#000000"/>
    <TextView
            android:text="Unterlagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/anat2.3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintVertical_bias="0.327"
            android:contentDescription="@string/Unterlagen" android:textColor="#000000"/>
    <RatingBar
            android:layout_width="235dp"
            android:layout_height="45dp"
            android:id="@+id/anat2ratingBar4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.405"
            android:scaleX=".5"
            android:scaleY=".5"

    />

    <RatingBar
            android:layout_width="235dp"
            android:layout_height="45dp"
            android:id="@+id/anat2ratingBar3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.339"
            android:scaleX=".5"
            android:scaleY=".5"

    />
    <TextView
            android:text="Stoffmenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/anat2.4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintVertical_bias="0.469"
            android:contentDescription="@string/Stoffmenge" android:textColor="#000000"/>
    <RatingBar
            android:layout_width="235dp"
            android:layout_height="45dp"
            android:id="@+id/anat2ratingBar6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.552"
            android:scaleX=".5"
            android:scaleY=".5"

    />
    <RatingBar
            android:layout_width="235dp"
            android:layout_height="45dp"
            android:id="@+id/anat2ratingBar5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.486"
            android:scaleX=".5"
            android:scaleY=".5"

    />
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_Profanat2"
            android:layout_width="411dp"
            android:layout_height="320dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="408dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            app:layout_constraintHorizontal_bias="0.0"><![CDATA[>

            ]]>
        <AutoCompleteTextView
                android:id="@+id/act_Profanat2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#3F51B5"
                android:hint="Professor?"
                android:textSize="30sp"
                android:textStyle="italic"
                android:padding="20dp" android:foregroundTint="#3F51B5"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/birdwhyy"
            android:id="@+id/anat2nextButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.889"
            app:layout_constraintVertical_bias="0.948"
            android:contentDescription="@string/Profbut1"/>

    <Button
            android:text="Bewerten"
            android:layout_width="113dp"
            android:layout_height="47dp"
            android:id="@+id/anat2button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.013" app:layout_constraintVertical_bias="0.971"
            android:backgroundTint="#3F51B5"/>


</androidx.constraintlayout.widget.ConstraintLayout>